test/spec_vectors/select/fail/module_15.wat
(module (func $type-num-vs-num (select (i32.const 1) (f64.const 1.0) (i32.const 1)) (drop)))